Test reading off-heap memory layout as generated by LongStorage by ArrowLanguage.